# OpenAssetIO-TraitGen-Markdown

./: .envrc  .gitignore  README.md  pyproject.toml
openassetio_traitgen_markdown/: __init__.py  markdown.py
